--- a/css/base/reset.css
+++ b/css/base/reset.css
@@ -33,3 +33,17 @@ input:focus {
   outline: none;
   border: 0;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 1rem;
+  font-weight: 700;
+}
+
+p {
+  margin-bottom: 1rem;
+}
