--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,9 @@
 
 /* BLOCKS */
 @import url("./blocks/brand.css");
-@import url("./blocks/navbar.css");
+@import url("./blocks/header.css");
 @import url("./blocks/menu.css");
 @import url("./blocks/actions.css");
 @import url("./blocks/button.css");
 @import url("./blocks/toggler.css");
+@import url("./blocks/hero.css");
