--- a/css/blocks/hero.css
+++ b/css/blocks/hero.css
@@ -22,6 +22,10 @@
 }
 
 .hero__title {
-  font-size: 40px;
-  line-height: calc(60 / 40 * 100%);
+  font-size: 3.5rem;
+  line-height: 1.2;
+}
+
+.hero__subtitle {
+	font-size: 1.4rem;
 }
