--- a/css/base/base.css
+++ b/css/base/base.css
@@ -10,8 +10,8 @@ body {
   position: relative;
   z-index: 1;
   width: 100%;
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+  padding-left: .75rem;
+  padding-right: .75rem;
   margin-right: auto;
   margin-left: auto;
 }
@@ -28,4 +28,9 @@ body {
   width: 100%;
   padding-left: 12px;
   padding-right: 12px;
+}
+
+
+.none {
+	display: none;
 }
