--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -15,13 +15,16 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding-top: 19px;
-  padding-bottom: 18px;
+	padding: 0 1rem;
 }
 
 .header__navbar > .container {
   display: flex;
-  flex-wrap: inherit;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+}
+
+.header__menu {
+  display: none;
 }
