--- a/css/blocks/actions.css
+++ b/css/blocks/actions.css
@@ -1,9 +1,27 @@
 .actions {
   display: flex;
   align-items: center;
-  column-gap: 24px;
+}
+
+.actions__list {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 
 .actions__link {
 	display: none;
+}
+
+.actions__link {
+	padding: 10px 25px;
+	border-color: var(--border);
+	color: var(--text-deep);
+	margin-right: 24px;
+}
+
+.actions__cta {
+	margin-right: 1rem;
+	background-color: var(--accent);
+	color: var(--white);
+	padding: 10px 25px;
 }
