--- a/css/blocks/button.css
+++ b/css/blocks/button.css
@@ -1,19 +1,17 @@
 .button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 43px;
+  display: inline-block;
   font-weight: 600;
-  border-radius: 4px;
-  line-height: calc(24 / 16 * 100%);
-  padding: 0 24px;
-  transition: 0.3s ease;
-  border: 1px solid transparent;
+	color: #555A64;
   text-align: center;
-  text-decoration: none;
   vertical-align: middle;
   user-select: none;
   background-color: transparent;
+	border: 1px solid transparent;
+	padding: 0.625rem 1.5rem;
+	font-size: 1rem;
+	line-height: calc(24 / 16 * 100%);
+	border-radius: 4px;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .actions__button {
